Don't clip bookmark bar to bounds

This was originally introduced to prevent the bookmark bar overlaying
the toolbar mid-animation, but this seems to no longer be the case.

The motivation to remove this is due to the clipping cutting off the
top of the bookmark buttons' focus rings.

Bug: 826294
Change-Id: I3c5909f1c8e86ff2c0593ebb6cbf866614c9df2d
Reviewed-on: https://chromium-review.googlesource.com/1064176
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559564}
Former-commit-id: 66d1e6b8e4eb1277df1487b1b52e41baba973e5b